--- a/.github/workflows/mirror-to-prod.yml
+++ b/.github/workflows/mirror-to-prod.yml
@@ -2,30 +2,35 @@ name: Mirror DEV -> PROD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "principal" ]
   workflow_dispatch:
 
 jobs:
   mirror:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout DEV
+      - name: Checkout DEV (full history)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Configurar Git
+      - name: Configure Git
         run: |
-          git config user.name "${{ secrets.PROD_GRUPO3 }}"
+          git config user.name "ci-bot"
           git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Agregar remoto de producción
+      - name: Add PROD remote (token only)
         run: |
           git remote remove prod || true
-          git remote add prod "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu-prod.git"
+          git remote add prod "https://x-access-token:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu-prod.git"
           git remote -v
+          # sanity check: valida permiso al repo destino
+          git ls-remote prod
 
-      - name: Enviar espejo (branches + tags)
+      - name: Mirror branches (force + prune)
         run: |
-          git push --prune prod +refs/heads/*:refs/heads/*
-          git push --prune --tags prod
+          git push --force --prune prod +refs/heads/:refs/heads/
+
+      - name: Mirror tags (force + prune)
+        run: |
+          git push --force --prune --tags prod
