--- a/.github/workflows/mirror-to-prod.yml
+++ b/.github/workflows/mirror-to-prod.yml
@@ -19,12 +19,11 @@ jobs:
           git config user.name "ci-bot"
           git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Add PROD remote (token only)
+      - name: Add PROD remote (use PAT with username)
         run: |
           git remote remove prod || true
-          git remote add prod "https://x-access-token:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu-prod.git"
+          git remote add prod "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu-prod.git"
           git remote -v
-          # sanity check: valida permiso al repo destino
           git ls-remote prod
 
       - name: Mirror branches (force + prune)
@@ -34,3 +33,4 @@ jobs:
       - name: Mirror tags (force + prune)
         run: |
           git push --force --prune --tags prod
+
