--- a/.github/workflows/mirror-to-prod.yml
+++ b/.github/workflows/mirror-to-prod.yml
@@ -6,31 +6,36 @@ on:
   workflow_dispatch:
 
 jobs:
-  mirror:
+  espejo:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout DEV (full history)
+      - name: Checkout DEV (sin credenciales del bot)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false   # <--- IMPORTANTE
 
-      - name: Configure Git
+      - name: Limpiar credenciales del bot (por si quedaron)
         run: |
-          git config user.name "ci-bot"
+          git config --global --unset-all http.https://github.com/.extraheader || true
+          git config --global credential.helper "" || true
+
+      - name: Configurar Git
+        run: |
+          git config user.name "${{ secrets.PROD_GRUPO3 }}"
           git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Add PROD remote (use PAT with username)
+      - name: Agregar remoto PROD con PAT
         run: |
           git remote remove prod || true
           git remote add prod "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu-prod.git"
           git remote -v
-          git ls-remote prod
+          git ls-remote prod   # debe listar refs si el PAT tiene permiso
 
-      - name: Mirror branches (force + prune)
+      - name: Ramas espejo (fuerza + poda)
         run: |
           git push --force --prune prod '+refs/heads/*:refs/heads/*'
 
-      - name: Mirror tags (force + prune)
+      - name: Etiquetas espejo (fuerza + poda)
         run: |
           git push --force --prune --tags prod
-
