--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,48 +1,63 @@
 name: Auto Merge Branches
 
 on:
-  push:
-    branches:
-      - dev-app
-      - dev-db
   schedule:
-    - cron: "0 * * * *" # cada hora, puedes cambiarlo a diario o semanal
+    - cron: "0 * * * *"  # cada hora
+  workflow_dispatch:
 
 jobs:
   merge-to-staging:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout (sin credenciales del bot)
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
       - name: Configurar Git
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "${{ secrets.PROD_GRUPO3 }}"
+          git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Merge desarrollo → staging
+      - name: Reconfigurar origin con PAT
         run: |
-          git fetch origin
+          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-windows.git"
+          git fetch origin --prune
+
+      - name: Merge dev-app -> staging
+        run: |
           git checkout staging
-          git merge origin/dev-app --no-edit || true
-          git merge origin/dev-db --no-edit || true
+          git merge --no-ff --no-edit origin/dev-app || exit 1
           git push origin staging
 
-  merge-to-main:
+  merge-staging-to-main:
     needs: merge-to-staging
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout (sin credenciales del bot)
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
       - name: Configurar Git
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "${{ secrets.PROD_GRUPO3 }}"
+          git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Merge staging → main
+      - name: Reconfigurar origin con PAT
         run: |
-          git fetch origin
-          git checkout main
-          git merge origin/staging --no-edit || true
-          git push origin main
+          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-windows.git"
+          git fetch origin --prune
+
+      - name: Crear PR staging -> main
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.PROD_PAT }}
+          commit-message: "chore: sync staging -> main"
+          title: "Auto-PR: staging → main"
+          body: "PR automático generado por workflow."
+          base: main
+          branch: ci/auto-pr-staging-to-main
+          delete-branch: true
