--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,50 +1,52 @@
 name: Auto Merge Branches
 
 on:
-  schedule:
-    - cron: "0 * * * *"  # cada hora
+  push:
+    branches:
+      - dev-app
+      - dev-db
+      - staging
   workflow_dispatch:
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   merge-to-staging:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout (sin credenciales del bot)
+      - name: Checkout (no bot creds)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Configurar Git
+      - name: Config Git
         run: |
           git config user.name "${{ secrets.PROD_GRUPO3 }}"
           git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Reconfigurar origin con PAT
+      - name: Reconfigurar origin con PAT (push con permisos)
         run: |
           git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-windows.git"
           git fetch origin --prune
 
-      - name: Merge dev-app -> staging
+      - name: Merge dev-app -> staging (no falla si ya está al día)
         run: |
           git checkout staging
-          git merge --no-ff --no-edit origin/dev-app || exit 1
+          git merge --no-ff --no-edit origin/dev-app || true
           git push origin staging
 
-  merge-staging-to-main:
+  pr-staging-to-main:
     needs: merge-to-staging
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout (sin credenciales del bot)
+      - name: Checkout (no bot creds)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: false
-
-      - name: Configurar Git
-        run: |
-          git config user.name "${{ secrets.PROD_GRUPO3 }}"
-          git config user.email "ci-bot@users.noreply.github.com"
 
       - name: Reconfigurar origin con PAT
         run: |
@@ -52,12 +54,22 @@ jobs:
           git fetch origin --prune
 
       - name: Crear PR staging -> main
+        id: cpr
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.PROD_PAT }}
-          commit-message: "chore: sync staging -> main"
+          token: ${{ secrets.GITHUB_TOKEN }}
           title: "Auto-PR: staging → main"
           body: "PR automático generado por workflow."
+          commit-message: "chore: sync staging -> main"
           base: main
           branch: ci/auto-pr-staging-to-main
           delete-branch: true
+          draft: false
+
+      - name: Enable auto-merge (squash)
+        if: steps.cpr.outputs.pull-request-number != ''
+        uses: peter-evans/enable-pull-request-automerge@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+          merge-method: squash
