--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Reconfigurar origin con PAT (push con permisos)
         run: |
-          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-windows.git"
+          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
           git fetch origin --prune
 
       - name: Merge dev-app -> staging (no falla si ya está al día)
@@ -50,8 +50,15 @@ jobs:
 
       - name: Reconfigurar origin con PAT
         run: |
-          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-windows.git"
+          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
           git fetch origin --prune
+
+      # (Opcional) Sincroniza staging con main para reducir conflictos
+      - name: Update staging with latest main
+        run: |
+          git checkout staging
+          git merge --no-ff --no-edit origin/main || true
+          git push origin staging
 
       - name: Crear PR staging -> main
         id: cpr
