--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -2,7 +2,10 @@ name: Auto Merge Branches
 
 on:
   push:
-    branches: [ dev-app, dev-db, staging ]
+    branches:
+      - dev-app
+      - dev-db
+      - staging
   workflow_dispatch:
 
 permissions:
@@ -19,25 +22,17 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Config Git identity
+      - name: Config Git
         run: |
           git config user.name "${{ secrets.PROD_GRUPO3 }}"
           git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Use PAT for pushes
+      - name: Reconfigurar origin con PAT (push con permisos)
         run: |
           git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
           git fetch origin --prune
 
-      # ↓ Minimiza conflictos trayendo MAIN a STAGING antes
-      - name: Update staging with latest main
-        run: |
-          git checkout staging
-          git merge --no-ff --no-edit origin/main || true
-          git push origin staging
-
-      # ↓ Integra dev-app en staging
-      - name: Merge dev-app -> staging
+      - name: Merge dev-app -> staging (no falla si ya está al día)
         run: |
           git checkout staging
           git merge --no-ff --no-edit origin/dev-app || true
@@ -53,12 +48,12 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Use PAT for pushes
+      - name: Reconfigurar origin con PAT
         run: |
           git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
           git fetch origin --prune
 
-      - name: Create PR staging -> main
+      - name: Crear PR staging -> main
         id: cpr
         uses: peter-evans/create-pull-request@v6
         with:
