--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -2,10 +2,7 @@ name: Auto Merge Branches
 
 on:
   push:
-    branches:
-      - dev-app
-      - dev-db
-      - staging
+    branches: [ dev-app, dev-db, staging ]
   workflow_dispatch:
 
 permissions:
@@ -32,7 +29,14 @@ jobs:
           git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
           git fetch origin --prune
 
-      - name: Merge dev-app -> staging (no falla si ya está al día)
+      # <<< ESTE PASO ES CLAVE: mantener staging al día con main >>>
+      - name: Update staging with latest main
+        run: |
+          git checkout staging
+          git merge --no-ff --no-edit origin/main || true
+          git push origin staging
+
+      - name: Merge dev-app -> staging (idempotente)
         run: |
           git checkout staging
           git merge --no-ff --no-edit origin/dev-app || true
