--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -2,7 +2,10 @@ name: Auto Merge Branches
 
 on:
   push:
-    branches: [ dev-app, dev-db, staging ]
+    branches:
+      - dev-app
+      - dev-db
+      - staging
   workflow_dispatch:
 
 permissions:
@@ -24,19 +27,11 @@ jobs:
           git config user.name "${{ secrets.PROD_GRUPO3 }}"
           git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Reconfigurar origin con PAT
+      - name: Reconfigurar origin con PAT (push con permisos)
         run: |
-          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
+          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-windows.git"
           git fetch origin --prune
 
-      # ① Trae MAIN a STAGING para minimizar conflictos
-      - name: Update staging with latest main
-        run: |
-          git checkout staging
-          git merge --no-ff --no-edit origin/main || true
-          git push origin staging
-
-      # ② Integra DEV en STAGING
       - name: Merge dev-app -> staging (no falla si ya está al día)
         run: |
           git checkout staging
