--- a/.github/workflows/auto-merge-app.yml
+++ b/.github/workflows/auto-merge-app.yml
@@ -1,10 +1,15 @@
-name: Auto Merge APP Branches
+name: Auto Merge APP Branches (Ubuntu)
 
 on:
   push:
     branches:
       - dev-app
   workflow_dispatch:
+
+# Evita empujes simultáneos a 'staging' (APP/DB se turnan)
+concurrency:
+  group: proyecto-ubuntu-staging-push
+  cancel-in-progress: false
 
 permissions:
   contents: write
@@ -25,16 +30,26 @@ jobs:
           git config user.name "${{ secrets.PROD_GRUPO3 }}"
           git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Set remote with PAT
+      - name: Set remote with PAT + fetch
         run: |
           git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
           git fetch origin --prune
 
-      - name: Merge dev-app → staging
+      - name: Merge dev-app → staging (rebase + retry)
         run: |
+          set -e
           git checkout -B staging origin/staging
-          git merge -X theirs --no-ff --no-edit origin/dev-app || true
-          git push origin HEAD:staging
+          git merge --no-ff --no-edit origin/dev-app || true
+          for i in 1 2 3; do
+            git fetch origin
+            git rebase origin/staging || true
+            if git push origin HEAD:staging; then
+              echo "Push a staging OK"
+              break
+            fi
+            echo "Remote avanzó; reintento $i..."
+            sleep 3
+          done
 
   pr-staging-to-main:
     needs: merge-app-to-staging
@@ -46,7 +61,7 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Set remote with PAT
+      - name: Set remote with PAT + fetch
         run: |
           git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
           git fetch origin --prune
@@ -57,10 +72,10 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           title: "Auto-PR (APP): staging → main"
-          body: "Cambios automáticos del módulo APP"
+          body: "Cambios automáticos del módulo APP (Ubuntu)"
           commit-message: "chore(APP): sync staging → main"
           base: main
-          branch: ci/auto-pr-app-staging-to-main
+          branch: ci/auto-pr-ubuntu-app-staging-to-main
           delete-branch: true
           draft: false
 
