--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -2,9 +2,7 @@ name: Auto Merge Branches
 
 on:
   push:
-    branches:
-      - dev-app
-      - staging
+    branches: [dev-app, staging]
   workflow_dispatch:
 
 permissions:
@@ -21,35 +19,59 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Config Git
+      - name: Set git identity
         run: |
-          git config user.name "${{ secrets.PROD_GRUPO3 }}"
+          git config user.name  "ci-bot"
           git config user.email "ci-bot@users.noreply.github.com"
 
-      - name: Reconfigurar origin con PAT (push con permisos)
+      # Habilita push con PAT si lo usas (opcional si el repo permite GITHUB_TOKEN)
+      # - name: Switch origin to PAT
+      #   run: |
+      #     git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
+      #     git fetch origin --prune
+
+      - name: Merge dev-app -> staging (no falla si ya está al día)
         run: |
-          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
           git fetch origin --prune
-
-      # 1) Trae siempre lo último de MAIN a STAGING para minimizar conflictos
-      - name: Update staging with latest main
-        run: |
           git checkout staging
-          git merge -X theirs --no-ff --no-edit origin/main || true
-          git push origin staging
+          git merge --no-ff --no-edit origin/dev-app || true
+          git push origin HEAD:staging
 
-      # 2) Si el push viene de dev-app, integra dev-app -> staging
-      - name: Merge dev-app -> staging
-        if: github.ref == 'refs/heads/dev-app'
-        run: |
-          git checkout staging
-          git merge -X theirs --no-ff --no-edit origin/dev-app || true
-          git push origin staging
+  pr-staging-to-main:
+    needs: merge-to-staging
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
-      # 3) Si el push viene de dev-db, integra dev-db -> staging
-      - name: Merge dev-db -> staging
-        if: github.ref == 'refs/heads/dev-db'
-        run: |
-          git checkout staging
-          git merge -X theirs --no-ff --no-edit origin/dev-db || true
-          git push origin staging
+      - name: Create PR staging -> main
+        id: cpr
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: "Auto-PR: staging → main"
+          body:  "PR automático generado por workflow."
+          commit-message: "chore: sync staging -> main"
+          base: main
+          branch: ci/auto-pr-staging-to-main
+          delete-branch: true
+          draft: false
+
+      # Si tu rama protegida exige 1 review, aprueba con el bot:
+      - name: Auto-approve (si se requiere)
+        if: steps.cpr.outputs.pull-request-number != ''
+        uses: juliangruber/approve-pull-request-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          number: ${{ steps.cpr.outputs.pull-request-number }}
+
+      # Activa el auto-merge en modo squash (compatible con "Require linear history")
+      - name: Enable auto-merge (squash)
+        if: steps.cpr.outputs.pull-request-number != ''
+        uses: peter-evans/enable-pull-request-automerge@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+          merge-method: squash
