--- a/.github/workflows/auto-merge-app.yml
+++ b/.github/workflows/auto-merge-app.yml
@@ -1,4 +1,3 @@
-# Crear/actualizar el script de despliegue
 sudo bash -c 'cat >/srv/deploy/pull-deploy.sh' <<'EOF'
 #!/usr/bin/env bash
 set -euo pipefail
@@ -8,16 +7,19 @@ WEB_DIR="/var/www/proyecto"
 BRANCH="dev-app"
 SUBDIR="Pagina1_IntegradorII"   # carpeta del proyecto dentro del repo
 LOG="/var/log/deploy-ubuntu.log"
+APP_USER="grupo3"
 
 echo "==== DEPLOY $(date) ====" | tee -a "$LOG"
 
-# Asegura repo en la versión remota exacta
-cd "$REPO_DIR"
-git fetch origin 2>&1 | tee -a "$LOG"
-git checkout "$BRANCH" 2>&1 | tee -a "$LOG"
-git reset --hard "origin/$BRANCH" 2>&1 | tee -a "$LOG"
+# Asegura repo en la versión remota exacta (como usuario normal con la llave)
+sudo -u "$APP_USER" -H bash -lc "
+  set -euo pipefail
+  cd \"$REPO_DIR\"
+  git fetch origin
+  git checkout \"$BRANCH\"
+  git reset --hard \"origin/$BRANCH\"
+"
 
-# Origen a sincronizar (subcarpeta del repo)
 SRC="$REPO_DIR/$SUBDIR"
 if [ ! -d "$SRC" ]; then
   echo "ERROR: No existe la carpeta $SRC" | tee -a "$LOG"
@@ -25,20 +27,17 @@ if [ ! -d "$SRC" ]; then
 fi
 
 # Sincroniza hacia el DocumentRoot
-rsync -a --delete \
-  --exclude ".git" --exclude ".github" \
-  "$SRC"/ "$WEB_DIR"/ 2>&1 | tee -a "$LOG"
+rsync -a --delete --exclude ".git" --exclude ".github" "$SRC"/ "$WEB_DIR"/ 2>&1 | tee -a "$LOG"
 
 # Permisos web
 chown -R www-data:www-data "$WEB_DIR"
 find "$WEB_DIR" -type f -exec chmod 0644 {} \;
 find "$WEB_DIR" -type d -exec chmod 0755 {} \;
 
-# (Opcional) recarga Apache si cambias .htaccess u otras confs
+# Recarga Apache (por si aplica)
 systemctl reload apache2 || true
 
 echo "OK: Despliegue completado en $WEB_DIR" | tee -a "$LOG"
 EOF
 
-# Permisos de ejecución
 sudo chmod +x /srv/deploy/pull-deploy.sh
