--- a/.github/workflows/auto-merge-app.yml
+++ b/.github/workflows/auto-merge-app.yml
@@ -5,20 +5,24 @@ set -euo pipefail
 REPO_DIR="/srv/deploy/proyecto-ubuntu"
 WEB_DIR="/var/www/proyecto"
 BRANCH="dev-app"
-SUBDIR="Pagina1_IntegradorII"   # carpeta del proyecto dentro del repo
+SUBDIR="Pagina1_IntegradorII"   # cambia si corresponde
 LOG="/var/log/deploy-ubuntu.log"
 APP_USER="grupo3"
+SSH_KEY="/home/grupo3/.ssh/id_ed25519"
 
 echo "==== DEPLOY $(date) ====" | tee -a "$LOG"
 
-# Asegura repo en la versión remota exacta (como usuario normal con la llave)
-sudo -u "$APP_USER" -H bash -lc "
-  set -euo pipefail
-  cd \"$REPO_DIR\"
-  git fetch origin
-  git checkout \"$BRANCH\"
-  git reset --hard \"origin/$BRANCH\"
-"
+# Git con la llave del usuario grupo3 (NO root)
+sudo -u "$APP_USER" -H env \
+  GIT_SSH_COMMAND="ssh -i $SSH_KEY -o IdentitiesOnly=yes" \
+  bash -lc "
+    set -euo pipefail
+    cd '$REPO_DIR'
+    git remote -v
+    git fetch origin
+    git checkout '$BRANCH'
+    git reset --hard 'origin/$BRANCH'
+  "
 
 SRC="$REPO_DIR/$SUBDIR"
 if [ ! -d "$SRC" ]; then
@@ -26,17 +30,13 @@ if [ ! -d "$SRC" ]; then
   exit 1
 fi
 
-# Sincroniza hacia el DocumentRoot
-rsync -a --delete --exclude ".git" --exclude ".github" "$SRC"/ "$WEB_DIR"/ 2>&1 | tee -a "$LOG"
+rsync -a --delete --exclude '.git' --exclude '.github' '$SRC/' '$WEB_DIR/' 2>&1 | tee -a "$LOG"
 
-# Permisos web
 chown -R www-data:www-data "$WEB_DIR"
 find "$WEB_DIR" -type f -exec chmod 0644 {} \;
 find "$WEB_DIR" -type d -exec chmod 0755 {} \;
 
-# Recarga Apache (por si aplica)
 systemctl reload apache2 || true
-
 echo "OK: Despliegue completado en $WEB_DIR" | tee -a "$LOG"
 EOF
 
