--- a/.github/workflows/auto-merge-app.yml
+++ b/.github/workflows/auto-merge-app.yml
@@ -1,88 +1,43 @@
-name: Auto Merge APP Branches (Ubuntu)
+sudo bash -c 'cat >/srv/deploy/pull-deploy.sh' <<'EOF'
+#!/usr/bin/env bash
+set -euo pipefail
 
-on:
-  push:
-    branches:
-      - dev-app
-  workflow_dispatch:
+REPO_DIR="/srv/deploy/proyecto-ubuntu"
+WEB_DIR="/var/www/proyecto"
+BRANCH="dev-app"
+SUBDIR="Pagina1_IntegradorII"   # cambia si corresponde
+LOG="/var/log/deploy-ubuntu.log"
+APP_USER="grupo3"
+SSH_KEY="/home/grupo3/.ssh/id_ed25519"
 
-# Evita empujes simultáneos a 'staging' (APP/DB se turnan)
-concurrency:
-  group: proyecto-ubuntu-staging-push
-  cancel-in-progress: false
+echo "==== DEPLOY $(date) ====" | tee -a "$LOG"
 
-permissions:
-  contents: write
-  pull-requests: write
+# Git con la llave del usuario grupo3 (NO root)
+sudo -u "$APP_USER" -H env \
+  GIT_SSH_COMMAND="ssh -i $SSH_KEY -o IdentitiesOnly=yes" \
+  bash -lc "
+    set -euo pipefail
+    cd '$REPO_DIR'
+    git remote -v
+    git fetch origin
+    git checkout '$BRANCH'
+    git reset --hard 'origin/$BRANCH'
+  "
 
-jobs:
-  merge-app-to-staging:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          persist-credentials: false
+SRC="$REPO_DIR/$SUBDIR"
+if [ ! -d "$SRC" ]; then
+  echo "ERROR: No existe la carpeta $SRC" | tee -a "$LOG"
+  exit 1
+fi
 
-      - name: Configure Git
-        run: |
-          git config user.name "${{ secrets.PROD_GRUPO3 }}"
-          git config user.email "ci-bot@users.noreply.github.com"
+rsync -a --delete --exclude '.git' --exclude '.github' '$SRC/' '$WEB_DIR/' 2>&1 | tee -a "$LOG"
 
-      - name: Set remote with PAT + fetch
-        run: |
-          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
-          git fetch origin --prune
+chown -R www-data:www-data "$WEB_DIR"
+find "$WEB_DIR" -type f -exec chmod 0644 {} \;
+find "$WEB_DIR" -type d -exec chmod 0755 {} \;
 
-      - name: Merge dev-app → staging (rebase + retry)
-        run: |
-          set -e
-          git checkout -B staging origin/staging
-          git merge --no-ff --no-edit origin/dev-app || true
-          for i in 1 2 3; do
-            git fetch origin
-            git rebase origin/staging || true
-            if git push origin HEAD:staging; then
-              echo "Push a staging OK"
-              break
-            fi
-            echo "Remote avanzó; reintento $i..."
-            sleep 3
-          done
+systemctl reload apache2 || true
+echo "OK: Despliegue completado en $WEB_DIR" | tee -a "$LOG"
+EOF
 
-  pr-staging-to-main:
-    needs: merge-app-to-staging
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          persist-credentials: false
-
-      - name: Set remote with PAT + fetch
-        run: |
-          git remote set-url origin "https://${{ secrets.PROD_GRUPO3 }}:${{ secrets.PROD_PAT }}@github.com/grupog849-netizen/proyecto-ubuntu.git"
-          git fetch origin --prune
-
-      - name: Create PR staging → main (APP)
-        id: cpr
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          title: "Auto-PR (APP): staging → main"
-          body: "Cambios automáticos del módulo APP (Ubuntu)"
-          commit-message: "chore(APP): sync staging → main"
-          base: main
-          branch: ci/auto-pr-ubuntu-app-staging-to-main
-          delete-branch: true
-          draft: false
-
-      - name: Enable auto-merge
-        if: steps.cpr.outputs.pull-request-number != ''
-        uses: peter-evans/enable-pull-request-automerge@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
-          merge-method: squash
+sudo chmod +x /srv/deploy/pull-deploy.sh
