--- a/.github/workflows/dev-deploy-ubuntu.yml
+++ b/.github/workflows/dev-deploy-ubuntu.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy-dev:
-    runs-on: [self-hosted, ubuntu-dev]
+    runs-on: [self-hosted,dev]
 
     steps:
       - name: Checkout repo
